Added classification for: - DataQuery - DataItem
This is needed to allow additional keywords to support, for example, labelling multi-active attributes or degenerate fields.

--- a/Examples/DV_Handlebars/Template.Handlebars
+++ b/Examples/DV_Handlebars/Template.Handlebars
@@ -2,16 +2,8 @@
 
 {{mappingName}}
 --
--- Working on mapping to {{targetDataObject.name}} from source {{sourceDataObject.name}}
+-- SELECT {{targetDataObject.name}} WHERE {{targetDataObject.name}}!=NULL
 --
-
----
--- The following items were provided
---
-{{#each dataItemMapping}}
--- Item {{sourceDataItem.name}} to {{targetDataItem.name}}
-{{/each}}
-
 
 
 {{/each}}
