--- a/Examples/DV_Handlebars/TemplateSampleBasicWithExtensions.Handlebars
+++ b/Examples/DV_Handlebars/TemplateSampleBasicWithExtensions.Handlebars
@@ -2,9 +2,9 @@
 
 Working on {{mappingName}}.
 
-  Data Object {{targetDataObject.name}} first extension is that the {{targetDataObject.extensions.0.key}} is {{targetDataObject.extensions.0.value}}
+  Data Object {{targetDataObject.name}}'s first extension is that the {{targetDataObject.extensions.0.key}} is {{targetDataObject.extensions.0.value}}.
 
-  In addition to this, the {{targetDataObject.extensions.1.key}} is {{targetDataObject.extensions.1.value}}
+  In addition to this, the {{targetDataObject.extensions.1.key}} is {{targetDataObject.extensions.1.value}}.
 
 {{/each}}
 
