--- a/Examples/DV_Handlebars/TemplateSampleBasicWithExtensions.Handlebars
+++ b/Examples/DV_Handlebars/TemplateSampleBasicWithExtensions.Handlebars
@@ -1,6 +1,7 @@
+--Example using key/value pair extensions.
 {{#each dataObjectMappings }}
 
-Working on {{mappingName}}.
+--Working on {{mappingName}}.
 
   Data Object {{targetDataObject.name}}'s first extension is that the {{targetDataObject.extensions.0.key}} is {{targetDataObject.extensions.0.value}}.
 
