--- a/Examples/DV_Handlebars/TemplateSampleSimpleDDL.Handlebars
+++ b/Examples/DV_Handlebars/TemplateSampleSimpleDDL.Handlebars
@@ -1,15 +1,16 @@
+--Example for using a templating engine to generate DDL statements.
 {{#each dataObjectMappings }}
 --
--- Generating DDL for {{sourceDataObject.name}}
+-- Generating DDL for {{sourceDataObjects.0.name}}
 --
 
 -- Drop table if exists
-IF OBJECT_ID (N'{{sourceDataObject.name}}', N'U') IS NOT NULL
-   DROP TABLE [{{sourceDataObject.name}}]
+IF OBJECT_ID (N'{{sourceDataObjects.0.name}}', N'U') IS NOT NULL
+   DROP TABLE [{{sourceDataObjects.0.name}}]
 
 -- Create table
-CREATE TABLE [{{sourceDataObject.name}}] (
-{{#each sourceDataObject.dataItems}}
+CREATE TABLE [{{sourceDataObjects.0.name}}] (
+{{#each sourceDataObjects.0.dataItems}}
   [{{name}}] {{dataType}}({{characterLength}}) NOT NULL{{#unless @last}},{{/unless}}
 {{/each}})
 
