--- a/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleFreeForm.Handlebars
+++ b/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleFreeForm.Handlebars
@@ -1,7 +1,8 @@
   {
     "bucketrelpath": "{{topicName.value}}",
     "bucketrootpath": "kafka/topics",
-    "container": "{{StringReplace sourceApp.value '_' '-'}}",
+    "container": "{{sourceApp.value}}",
     "containerrootpath": "data",
     "module_code": "m_050_kafka_{{StringReplace topicName.value '-' '_'}}"
   }
+
