Changes to move away from Newtonsoft. Apparently, there is a JsonNode object that can replace the ExpandoObject approach used with Json.net.

--- a/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleFreeForm.Handlebars
+++ b/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleFreeForm.Handlebars
@@ -3,6 +3,6 @@
     "bucketrootpath": "kafka/topics",
     "container": "{{sourceApp.value}}",
     "containerrootpath": "data",
-    "module_code": "m_050_kafka_{{StringReplace topicName.value '-' '_'}}"
+    "module_code": "kafka_{{StringReplace topicName.value '-' '_'}}"
   }
 
