Fixed bug in exists function.

--- a/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -25,6 +25,7 @@ Found a data item mapping from {{sourceDataItems.0.name}} to {{targetDataItem.na
 
 {{#targetDataItemExists "FIRST_NAME"}}FIRST_NAME exists{{else}}FIRST_NAME does not exist{{/targetDataItemExists}}
 {{#targetDataItemExists "NAME"}}NAME exists{{else}}NAME does not exist{{/targetDataItemExists}}
+{{#targetDataItemExists "DATE_OF_BIRTH"}}NAME exists{{else}}NAME does not exist{{/targetDataItemExists}}
 
 -- End of mapping
 {{/each}}
