--- a/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -23,6 +23,9 @@ Working on mapping {{mappingName}}
 Found a data item mapping from {{sourceDataItems.0.name}} to {{targetDataItem.name}}
 {{/each}}
 
+{{#exists multiActiveKey}}There is a multi-active key!{{else}}No multi-active key in this data object mapping.{{/exists}}
+{{#exists targetDataItem}}There is a target data item in this mapping!{{else}}No target data items are defined in this mapping.{{/exists}}
+
 {{#targetDataItemExists "FIRST_NAME"}}FIRST_NAME exists{{else}}FIRST_NAME does not exist{{/targetDataItemExists}}
 {{#targetDataItemExists "NAME"}}NAME exists{{else}}NAME does not exist{{/targetDataItemExists}}
 {{#targetDataItemExists "DATE_OF_BIRTH"}}NAME exists{{else}}NAME does not exist{{/targetDataItemExists}}
