--- a/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/ClassLibrary/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -23,12 +23,13 @@ Working on mapping {{mappingName}}
 Found a data item mapping from {{sourceDataItems.0.name}} to {{targetDataItem.name}}
 {{/each}}
 
-{{#exists multiActiveKey}}There is a multi-active key!{{else}}No multi-active key in this data object mapping.{{/exists}}
+{{#exists multiActiveKey}}There is a multi-active key!{{else}}No multi-active key is found in this data object mapping.{{/exists}}
+{{#exists multiActiveKey "DATE_OF_BIRTH"}}There is a multi-active key which is not DATE_OF_BIRTH{{else}}No multi-active key with DATE_OF_BIRTH is found in this data object mapping.{{/exists}}
 {{#exists targetDataItem}}There is a target data item in this mapping!{{else}}No target data items are defined in this mapping.{{/exists}}
 
 {{#targetDataItemExists "FIRST_NAME"}}FIRST_NAME exists{{else}}FIRST_NAME does not exist{{/targetDataItemExists}}
 {{#targetDataItemExists "NAME"}}NAME exists{{else}}NAME does not exist{{/targetDataItemExists}}
-{{#targetDataItemExists "DATE_OF_BIRTH"}}NAME exists{{else}}NAME does not exist{{/targetDataItemExists}}
+{{#targetDataItemExists "DATE_OF_BIRTH"}}DATE_OF_BIRTH exists{{else}}DATE_OF_BIRTH does not exist{{/targetDataItemExists}}
 
 -- End of mapping
 {{/each}}
