--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -1,7 +1,9 @@
+The name of the dataObjectMapping is '{{dataObjectMappings.0.name}}'
+
 The time is {{now}}.
 
-{{#replicate 10}}
-This value is replicated 10 times!
+{{#replicate 3}}
+This value is replicated 3 times!
 {{/replicate}}
 
 And here is a random string: {{randomstring 10}}.
