--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleBasic.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleBasic.Handlebars
@@ -1,7 +1,8 @@
+--TemplateSampleBasic.json
 --Example using a templating engine for a simple select statement.
 {{#each dataObjectMappings}}
 
---Working on {{mappingName}}.
+--Working on {{name}}.
 
 SELECT
 {{#each dataItemMappings}}
