--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleMultipleDataItemMappings.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleMultipleDataItemMappings.Handlebars
@@ -1,7 +1,8 @@
+--TemplateSampleMultipleDataItemMappings.json
 --Example where multiple sources map to a single target.
 {{#each dataObjectMappings }}
 
---Working on {{mappingName}}
+--Working on {{name}}
 
 Explaining mappings of multiple sources to one target, in this case {{targetDataObject.name}}.
 
