--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleSimpleDDL.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleSimpleDDL.Handlebars
@@ -1,3 +1,4 @@
+--TemplateSampleSimpleDDL.json
 --Example for using a templating engine to generate DDL statements.
 {{#each dataObjectMappings }}
 --
