--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleCalculation.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleCalculation.Handlebars
@@ -1,8 +1,9 @@
+--TemplateSampleCalculation.json
 --Example using a query as a source rather than an attribute.
 {{#each dataObjectMappings }}
 
 {{#if mappingName}}
---Working on {{mappingName}}.
+--Working on {{name}}.
 {{else}}
 --No mapping name is defined.
 {{/if}}
@@ -11,9 +12,9 @@ SELECT
 
 {{#each dataItemMappings}}
   {{#each sourceDataItems}}
-    {{#if dataQueryCode}}
+    {{#if queryCode}}
     -- This is the data query logic
-    {{dataQueryCode}} as {{../targetDataItem.name}}{{else}}
+    {{queryCode}} as {{../targetDataItem.name}}{{else}}
     -- This is the item, with brackets added using a custom extension
     {{stringwrap name "[" "]"}} as {{../targetDataItem.name}}
     {{/if}}{{/each}}{{#unless @last}},{{/unless}}
