Some handlebars functions, not all

--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -19,6 +19,8 @@ This is {{space "Roelant"}} ...spaced out.
 
 This replaces the a's in Roelant with an !: {{StringReplace "Roelant" "a" "!"}}
 
+This adds brackets around the string vlue: {{stringwrap "Example" "[" "]"}}
+
 {{!-- Demonstrating the array lookup --}}
 {{#each dataObjectMappings}}
 Working on mapping {{name}}
