Some handlebars functions, not all

--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -19,7 +19,7 @@ This is {{space "Roelant"}} ...spaced out.
 
 This replaces the a's in Roelant with an !: {{StringReplace "Roelant" "a" "!"}}
 
-This adds brackets around the string vlue: {{stringwrap "Example" "[" "]"}}
+This adds brackets around the string value: {{stringwrap "Example" "[" "]"}}
 
 {{!-- Demonstrating the array lookup --}}
 {{#each dataObjectMappings}}
