--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -36,5 +36,7 @@ Found a data item mapping from {{sourceDataItems.0.name}} to {{targetDataItem.na
 {{#targetDataItemExists "NAME"}}NAME exists{{else}}NAME does not exist{{/targetDataItemExists}}
 {{#targetDataItemExists "DATE_OF_BIRTH"}}DATE_OF_BIRTH exists{{else}}DATE_OF_BIRTH does not exist{{/targetDataItemExists}}
 
+The lookup value for 'type' is '{{lookupExtension sourceDataObjects.0.extensions "type"}}'.
+
 -- End of mapping
 {{/each}}
