Added upper- and lower case extension for Handlebars.

--- a/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
+++ b/DataWarehouseAutomation/Sample_Templates/TemplateSampleCustomFunctions.Handlebars
@@ -17,6 +17,10 @@ A and B {{#stringdiff "A" "B"}}are different. {{else}}are not different. {{/stri
 
 This is {{space "Roelant"}} ...spaced out.
 
+This is {{stringupper "Roelant"}} ...upper-cased.
+
+This is {{stringlower "Roelant"}} ...lower-cased.
+
 This replaces the a's in Roelant with an !: {{StringReplace "Roelant" "a" "!"}}
 
 This adds brackets around the string value: {{stringwrap "Example" "[" "]"}}
